[package]
name = "balls-bevy"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_hanabi = "0.12.2"
bevy_rapier2d = { version = "0.27.0", features = [
  "debug-render-2d",
  "simd-stable",
] }
lyon = "1.0.1"
rand = "0.8.5"
